updates madee to the project files. The commit message should reflect these changes.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EcoWater Tracker - Dashboard</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="manifest" href="manifest.json" />
+  <!-- Favicon & App Icons -->
+<link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
+<link rel="shortcut icon" href="/icons/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="EcoWater Tracker " />
+<link rel="manifest" href="/icons/site.webmanifest" />
+  <link rel="stylesheet" href="css/styles.css"/>
   <meta name="theme-color" content="#319795" />
-  <link rel="apple-touch-icon" href="icons/icon-192.png" />
-
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
