--- a/signup.html
+++ b/signup.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Sign Up - EcoWater Tracker</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EcoWater Tracker</title>
+   <!-- Favicon & App Icons -->
+<link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
+<link rel="shortcut icon" href="/icons/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="EcoWater Tracker " />
+<link rel="manifest" href="/icons/site.webmanifest" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <meta name="theme-color" content="#319795" />
 </head>
 <body class="auth-body">
   <div class="auth-container">
